--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <!-- Title -->
             <div class="grid-column span-12 reveal-on-scroll is-revealing">
                 <div class="square">
-                    <header class="aspect-ratio__content bg--tan text--white align--center centered-content" style="background:rgba(0,0,0,0) url(/img/313_logo.png) no-repeat scroll center center/cover">
+                    <header class="aspect-ratio__content bg--tan text--white align--center centered-content" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_logo.png) no-repeat scroll center center/cover">
                         <!-- <h1 class="inline-block vertical--middle mb0 uppercase">313 SHOP</h1> -->
                     </header>
                 </div>
@@ -41,7 +41,7 @@
                 <div class="square">
                     <div class="aspect-ratio__content centered-content border--tan p2">
                         <div class="align--left">
-                            <img class="quote mb1" src="/img/quote.svg">
+                            <img class="quote mb1" src="https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/quote.svg">
                         </div>
                         <p>Whatsapp me for details&nbsp;staff. 01303424012</p>
                         <button><a href="tel:+8801303424012" style="text-decoration: none;color:black;">Call us</a></button>
@@ -67,25 +67,25 @@
                         <!-- 1st food pic -->
                         <div class="grid-column span-12 mt1 span-half-mobile mobile-col--left reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/honey_nut.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/honey_nut.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <!-- Building pic -->
                         <div class="grid-column mt1 show-on-mobile span-half-mobile mobile-col--right reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/ghee.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/ghee.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <!-- 1st food pic -->
                         <div class="grid-column span-12 mt1 span-half-mobile mobile-col--left reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/ajwa.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/ajwa.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <!-- Building pic -->
                         <div class="grid-column mt1 show-on-mobile span-half-mobile mobile-col--right reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/dabbas.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/dabbas.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <!-- 1st food pic -->
@@ -93,24 +93,24 @@
                         <!-- Building pic -->
                         <div class="grid-column mt1 show-on-mobile span-half-mobile mobile-col--right reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/kismis.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/kismis.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <!-- 1st food pic -->
                         <div class="grid-column span-12 mt1 span-half-mobile mobile-col--left reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/kaju_badam.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/kaju_badam.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <!-- Building pic -->
                         <div class="grid-column mt1 show-on-mobile span-half-mobile mobile-col--right reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/kat_badam.png) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/kat_badam.png) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                         <div class="grid-column mt1 show-on-mobile span-half-mobile mobile-col--right reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/mixed_fruit_raw.jpg) no-repeat scroll center center/cover"></div>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/mixed_fruit_raw.jpg) no-repeat scroll center center/cover"></div>
                             </div>
                         </div>
                     </div>
@@ -118,14 +118,14 @@
                         <!-- Map - desktop and mobile -->
                         <div class="grid-column span-12 offset-half mt1 align--center hide-md-to-lg reveal-on-scroll is-revealing">
                             <div class="square">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/map_313_shop.png) no-repeat scroll center center/cover"><a href="https://www.google.com/maps" target="_blank" class="link block full-height"></a>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/map_313_shop.png) no-repeat scroll center center/cover"><a href="https://www.google.com/maps" target="_blank" class="link block full-height"></a>
                                 </div>
                             </div>
                         </div>
                         <!-- Map - tablet -->
                         <div class="grid-column mt1 align--center show-md-to-lg mobile-col--full reveal-on-scroll is-revealing">
                             <div class="rectangle">
-                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/map_313_shop.png) no-repeat scroll center center/cover"><a href="https://www.google.com/maps" target="_blank" class="link block full-height"></a>
+                                <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/map_313_shop.png) no-repeat scroll center center/cover"><a href="https://www.google.com/maps" target="_blank" class="link block full-height"></a>
                                 </div>
                             </div>
                         </div>
@@ -134,19 +134,19 @@
                 <!-- Building pic - tablet and desktop -->
                 <div class="grid-column span-12 mt1 hide-on-mobile reveal-on-scroll is-revealing">
                     <div class="square">
-                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/ajwa.png) no-repeat scroll center center/cover"></div>
+                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/ajwa.png) no-repeat scroll center center/cover"></div>
                     </div>
                 </div>
                 <!-- Building pic - tablet and desktop -->
                 <div class="grid-column span-12 mt1 hide-on-mobile reveal-on-scroll is-revealing">
                     <div class="square">
-                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/dabbas.png) no-repeat scroll center center/cover"></div>
+                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/dabbas.png) no-repeat scroll center center/cover"></div>
                     </div>
                 </div>
                 <!-- Building pic - tablet and desktop -->
                 <div class="grid-column span-12 mt1 hide-on-mobile reveal-on-scroll is-revealing">
                     <div class="square">
-                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/delget_noir_packet.jpg) no-repeat scroll center center/cover"></div>
+                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/delget_noir_packet.jpg) no-repeat scroll center center/cover"></div>
                     </div>
                 </div>
             </div>
@@ -164,7 +164,7 @@
                 <!-- Download menu - desktop and mobile -->
                 <div class="grid-column span-6 offset-one-fourth mt1 order-5 hide-md-to-lg reveal-on-scroll is-revealing">
                     <div class="square">
-                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/313_products/modhu.png) no-repeat scroll center center/cover"></div>
+                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/313_products/modhu.png) no-repeat scroll center center/cover"></div>
                     </div>
                 </div>
                 
@@ -181,7 +181,7 @@
                 <!-- 2nd food pic -->
                 <div class="grid-column span-6 span-half-mobile mobile-col--right mt1 order-4 reveal-on-scroll is-revealing">
                     <div class="square">
-                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(/img/food2.jpg) no-repeat scroll center center/cover"></div>
+                        <div class="aspect-ratio__content bg--tan" style="background:rgba(0,0,0,0) url(https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/food2.jpg) no-repeat scroll center center/cover"></div>
                     </div>
                 </div>
                 <!-- 2nd testimonial -->
@@ -189,7 +189,7 @@
                     <div class="square">
                         <div class="aspect-ratio__content centered-content border--tan p2">
                             <div class="align--left">
-                                <img class="quote mb1" src="/img/quote.svg">
+                                <img class="quote mb1" src="https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/quote.svg">
                             </div>
                             <p>You can also order from facebook page&nbsp; by sending message.</p>
                             <p class="italic">– Alom, CTO at 313 Shop</p>
@@ -207,10 +207,10 @@
                 </div>
                 <div class="grid-column align--right align--center-on-mobile mt1">
                     <ul class="no-bullets list--inline">
-                        <!-- <li class="mr1"><a href="" class="link"><img class="icon" src="/img/instagram.svg" alt="Instagram"></a></li>
-                        <li class="mr1"><a href="" class="link"><img class="icon" src="/img/twitter.svg" alt="Twitter"></a></li>
-                        <li class="mr1"><a href="" class="link"><img class="icon" src="/img/foursquare.svg" alt="Foursquare"></a></li> -->
-                        <li><a href="https://www.facebook.com/313ShopSyl" class="link"><img class="icon" src="/img/facebook.svg" alt="Facebook"></a></li>
+                        <!-- <li class="mr1"><a href="" class="link"><img class="icon" src="https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/instagram.svg" alt="Instagram"></a></li>
+                        <li class="mr1"><a href="" class="link"><img class="icon" src="https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/twitter.svg" alt="Twitter"></a></li>
+                        <li class="mr1"><a href="" class="link"><img class="icon" src="https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/foursquare.svg" alt="Foursquare"></a></li> -->
+                        <li><a href="https://www.facebook.com/313ShopSyl" class="link"><img class="icon" src="https://raw.githubusercontent.com/amran-muhammad/313shop/main/img/facebook.svg" alt="Facebook"></a></li>
                     </ul>
                 </div>
             </div>
